5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1807_2564.log
== TEST (2019-06-05 09:36:05) 
-- CODE:
from numpy import* 
cont= zeros(3, dtype=int)
v1= array(eval(input("Insira o numero de gols feitos:")))
v2= array(eval(input("Insira o numero de gols levados:")))

for i in range(size(v1)) and range(size(v2)):
	if()
-- ERROR:
File "XXXX", line 7
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 09:36:11) 
-- CODE:
from numpy import* 
cont= zeros(3, dtype=int)
v1= array(eval(input("Insira o numero de gols feitos:")))
v2= array(eval(input("Insira o numero de gols levados:")))

for i in range(size(v1)) and range(size(v2)):
	if()>
-- ERROR:
File "XXXX", line 7
    if()>
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 09:36:19) 
-- CODE:
from numpy import* 
cont= zeros(3, dtype=int)
v1= array(eval(input("Insira o numero de gols feitos:")))
v2= array(eval(input("Insira o numero de gols levados:")))

for i in range(size(v1)) and range(size(v2)):
	if():
-- ERROR:
File "XXXX", line 8
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 09:36:27) 
-- CODE:
from numpy import* 
cont= zeros(3, dtype=int)
v1= array(eval(input("Insira o numero de gols feitos:")))
v2= array(eval(input("Insira o numero de gols levados:")))

for i in range(size(v1)) and range(size(v2)):

-- ERROR:
File "XXXX", line 7
    
                                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 09:40:01) 
-- CODE:
from numpy import* 
cont= zeros(3, dtype=int)
v1= array(eval(input("Insira o numero de gols feitos:")))
v2= array(eval(input("Insira o numero de gols levados:")))

for i in range(size(v1)) and range(size(v2)):
	if(v1[i]>v2[i]):
		cont[0]=cont[0]+1
	elif(v1[i]==v2[i]):
		cont[1]=cont[1]+1
	elif(v1[i])<v2[i]:
		cont[2]=cont[2]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 09:40:20) 
-- CODE:
from numpy import* 
cont= zeros(3, dtype=int)
v1= array(eval(input("Insira o numero de gols feitos:")))
v2= array(eval(input("Insira o numero de gols levados:")))

for i in range(size(v1)) and range(size(v2)):
	if(v1[i]>v2[i]):
		cont[0]=cont[0]+1
	elif(v1[i]==v2[i]):
		cont[1]=cont[1]+1
	elif(v1[i])<v2[i]:
		cont[2]=cont[2]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 09:40:42) 
-- CODE:
from numpy import* 
cont= zeros(3, dtype=int)
v1= array(eval(input("Insira o numero de gols feitos:")))
v2= array(eval(input("Insira o numero de gols levados:")))

for i in range(size(v1)) and range(size(v2)):
	if(v1[i]>v2[i]):
		cont[0]=cont[0]+1
	elif(v1[i]==v2[i]):
		cont[1]=cont[1]+1
	elif(v1[i])<v2[i]:
		cont[2]=cont[2]+1
print(cont)
-- EXECUTION TIME:
1.03208
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
